tests/data/empty-host-ingress/empty-host-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: empty-host
spec:
  replicas: 2
  selector:
    matchLabels:
      app: empty-host
  template:
    metadata:
      labels:
        app: empty-host
    spec:
      containers:
      - name: empty-host
        image: nginxdemos/hello:plain-text
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: empty-host-svc
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: empty-host
