tests/data/empty-host-ingress/empty-host-ingress-default-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: empty-host-ingress-default-backend
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: backend2-svc
      port:
        number: 80
  rules:
  - http:
      paths:
      - path: /backend1
        pathType: Prefix
        backend:
          service:
            name: backend1-svc
            port:
              number: 80
