tests/data/empty-host-ingress/empty-host-ingress-rejected-listen-ports.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: empty-host-ingress-rejected-listen-ports
  annotations:
    nginx.org/listen-ports: "8080"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: backend1-svc
             port:
               number: 80
