tests/data/empty-host-ingress/empty-host-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: empty-host-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: backend1-svc
             port:
               number: 80
